--- a/hermiz_sparky.html
+++ b/hermiz_sparky.html
@@ -2,7 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Sparky the Sun Devil</title>		
+		<meta name="author" content="Savana Hermiz">
+		<title>Sparky the Sun Devil</title>	
+		<link rel="stylesheet" type="text/css" href="styles.css" />	
 	</head>
 
 	<body>
